<View
    android:id="@+id/v_mypage_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cl_mypage_profile">

    <ImageView
        android:id="@+id/iv_mypage_journey"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mypage_journey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mypage_journey"
        app:layout_constraintStart_toEndOf="@id/iv_mypage_journey"
        app:layout_constraintTop_toTopOf="@id/iv_mypage_journey" />

    <ImageView
        android:id="@+id/iv_mypage_journey_button"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_android_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_mypage_journey" />
</View>

<View
android:layout_width="match_parent"
android:layout_height="wrap_content" />

<ImageView
android:id="@+id/iv_mypage_store"
android:layout_width="24dp"
android:layout_height="0dp"
android:src="@drawable/ic_android_black_24dp"
app:layout_constraintDimensionRatio="1"
app:layout_constraintStart_toStartOf="@id/iv_mypage_journey"
app:layout_constraintTop_toBottomOf="@id/iv_mypage_journey" />

<TextView
android:id="@+id/tv_mypage_store"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/mypage_store"
app:layout_constraintStart_toEndOf="@id/iv_mypage_store"
app:layout_constraintTop_toTopOf="@id/iv_mypage_store" />

<ImageView
android:id="@+id/iv_mypage_store_button"
android:layout_width="24dp"
android:layout_height="0dp"
android:src="@drawable/ic_android_black_24dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="@id/iv_mypage_store" />


<View
android:id="@+id/v_mypage_divider"
android:layout_width="wrap_content"
android:layout_height="10dp"
android:background="#1B1B23"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/v_mypage_menu" />

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/cl_mypage_info"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:layout_constraintBottom_toTopOf="@id/cl_mypage_logout"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/v_mypage_divider" />

<TextView
android:id="@+id/tv_mypage_info"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/mypage_info"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent" />

<TextView
android:id="@+id/tv_mypage_termofuse"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/mypage_termofuse"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/tv_mypage_info" />

<ImageView
android:id="@+id/iv_mypage_termofuse_button"
android:layout_width="24dp"
android:layout_height="0dp"
android:src="@drawable/ic_android_black_24dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="@id/tv_mypage_termofuse" />

<TextView
android:id="@+id/tv_mypage_privacy"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/mypage_privacy"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/tv_mypage_termofuse" />

<ImageView
android:id="@+id/iv_mypage_privacy_button"
android:layout_width="24dp"
android:layout_height="0dp"
android:src="@drawable/ic_android_black_24dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintTop_toTopOf="@id/tv_mypage_privacy" />


<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/cl_mypage_logout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent">

<TextView
    android:id="@+id/tv_mypage_logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="로그아웃"
    app:layout_constraintEnd_toStartOf="@id/iv_mypage_logout_divider"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/iv_mypage_logout_divider"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/mypage_line_small"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/tv_mypage_withdrawal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="회원탈퇴"
    app:layout_constraintStart_toEndOf="@id/iv_mypage_logout_divider"
    app:layout_constraintTop_toTopOf="@id/tv_mypage_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>