<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="54dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/mypage_profile_img"
        android:src="@drawable/img_profile"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_collections"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/shape_background_radius7_gray6"
        app:layout_constraintBottom_toTopOf="@id/tv_journey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />


    <TextView
        android:id="@+id/tv_journey"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="?gray6"
        android:drawablePadding="15dp"
        android:textAppearance="?textAppearanceTitleSmall"
        android:textColor="?gray5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_collections" />

    <ImageView
        android:id="@+id/iv_journey_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/mypage_journey_button_img"
        android:src="@drawable/ic_arrow_24_gray2"
        app:layout_constraintBottom_toBottomOf="@id/tv_journey"
        app:layout_constraintDimensionRatio="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_journey" />


    <TextView
        android:id="@+id/tv_store"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="?gray6"
        android:drawablePadding="15dp"
        android:textAppearance="?textAppearanceTitleSmall"
        android:textColor="?white_text"
        app:layout_constraintStart_toStartOf="@id/tv_journey"
        app:layout_constraintTop_toBottomOf="@id/tv_journey" />

    <ImageView
        android:id="@+id/iv_store_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/mypage_store_button_img"
        android:src="@drawable/ic_arrow_24_gray2"
        app:layout_constraintBottom_toBottomOf="@id/tv_store"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/iv_journey_button"
        app:layout_constraintTop_toTopOf="@id/tv_store" />


</androidx.constraintlayout.widget.ConstraintLayout>