<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_mypage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_mypage_title"
            style="?textAppearanceTitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/my_page"
            android:textColor="?white_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/iv_mypage_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@id/v_mypage_collections"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_mypage_title" />

    <TextView
        android:id="@+id/tv_mypage_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="여민서"
        app:layout_constraintBottom_toBottomOf="@id/iv_mypage_profile"
        app:layout_constraintStart_toEndOf="@id/iv_mypage_profile"
        app:layout_constraintTop_toTopOf="@id/iv_mypage_profile" />

    <View
        android:id="@+id/v_mypage_collections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/mypage_rectangle"
        app:layout_constraintBottom_toTopOf="@id/v_mypage_journey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_mypage_profile" />

    <View
        android:id="@+id/v_mypage_collection_line"
        android:layout_width="1dp"
        android:layout_height="57dp"
        android:background="?gray4"
        app:layout_constraintBottom_toBottomOf="@id/v_mypage_collections"
        app:layout_constraintEnd_toEndOf="@id/v_mypage_collections"
        app:layout_constraintStart_toStartOf="@id/v_mypage_collections"
        app:layout_constraintTop_toTopOf="@id/v_mypage_collections" />

    <TextView
        android:id="@+id/tv_mypage_point_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/mypage_point_title"
        app:layout_constraintEnd_toEndOf="@id/v_mypage_collection_line"
        app:layout_constraintStart_toStartOf="@id/v_mypage_collections"
        app:layout_constraintTop_toTopOf="@id/v_mypage_collections" />

    <TextView
        android:id="@+id/tv_mypage_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="14dp"
        android:text="100P"
        app:layout_constraintBottom_toBottomOf="@id/v_mypage_collections"
        app:layout_constraintEnd_toEndOf="@id/tv_mypage_point_title"
        app:layout_constraintStart_toStartOf="@id/tv_mypage_point_title"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_point_title" />

    <TextView
        android:id="@+id/tv_mypage_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mypage_badge_collection"
        app:layout_constraintEnd_toEndOf="@id/v_mypage_collections"
        app:layout_constraintStart_toStartOf="@id/v_mypage_collection_line"
        app:layout_constraintTop_toTopOf="@id/tv_mypage_point_title" />

    <ImageView
        android:id="@+id/iv_mypage_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/mypage_badgeicon_white_24"
        app:layout_constraintEnd_toEndOf="@id/tv_mypage_badge"
        app:layout_constraintStart_toStartOf="@id/tv_mypage_badge"
        app:layout_constraintTop_toBottomOf="@id/tv_mypage_badge" />

    <View
        android:id="@+id/v_mypage_journey"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toTopOf="@id/v_mypage_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_mypage_collections" />

    <TextView
        android:id="@+id/tv_mypage_journey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:drawableStart="@drawable/mypage_journeyicon_24"
        android:drawablePadding="15dp"
        android:text="@string/mypage_journey"
        app:layout_constraintBottom_toBottomOf="@id/v_mypage_journey"
        app:layout_constraintStart_toStartOf="@id/v_mypage_collections"
        app:layout_constraintTop_toTopOf="@id/v_mypage_journey" />

    <ImageView
        android:id="@+id/iv_mypage_journey_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/all_arrowicon_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_mypage_journey"
        app:layout_constraintDimensionRatio="1dp"
        app:layout_constraintEnd_toEndOf="@id/v_mypage_collections"
        app:layout_constraintTop_toTopOf="@id/tv_mypage_journey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?gray8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_mypage_journey" />

    <View
        android:id="@+id/v_mypage_store"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_mypage_collections" />


    <TextView
        android:id="@+id/tv_mypage_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="22dp"
        android:drawableStart="@drawable/mypage_storeicon_24"
        android:drawablePadding="15dp"
        android:text="@string/mypage_store"
        app:layout_constraintBottom_toBottomOf="@id/v_mypage_store"
        app:layout_constraintStart_toStartOf="@id/tv_mypage_journey"
        app:layout_constraintTop_toTopOf="@id/v_mypage_store" />

    <ImageView
        android:id="@+id/iv_mypage_store_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/all_arrowicon_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_mypage_store"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@id/v_mypage_collections"
        app:layout_constraintTop_toTopOf="@id/tv_mypage_store" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="?gray8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_mypage_store" />

</androidx.constraintlayout.widget.ConstraintLayout>